updated markdown files

--- a/content/tutorials/next-js-and-shopify-store/creating-a-shopify-partners-store.mdx
+++ b/content/tutorials/next-js-and-shopify-store/creating-a-shopify-partners-store.mdx
@@ -2,10 +2,9 @@
 
 The first thing you will need is a [Shopify Partners Account](https://www.shopify.com/partners). It is completely free to sign up. The Shopify Partners account will allow us to create as many development stores as we need for free, which is exactly what we want.
 
-<aside>
-💡 You do not want to sign up for the Shopify Trial found on their home page.
-
-</aside>
+:::info
+You do not want to sign up for the Shopify Trial found on their home page.
+:::
 
 Once you have created your account, you should land on the Shopify Partners dashboard.
 
@@ -13,10 +12,9 @@ Once you have created your account, you should land on the Shopify Partners dash
 
 Click on the Stores link in the left sidebar and then click on the "Add store" button.
 
-<aside>
-💡 You will need to confirm your email address before you are able to create a store so make sure you do that first
-
-</aside>
+:::info
+You will need to confirm your email address before you are able to create a store so make sure you do that first
+:::
 
 ![Screen Shot 2021-12-16 at 9.12.22 AM.png](/images/tutorials/next-js-and-shopify-store/creating-a-shopify-partners-store/Screen_Shot_2021-12-16_at_9.12.22_AM.png)
 
