--- a/content/tutorials/next-js-and-shopify-store/creating-the-next-js-app.mdx
+++ b/content/tutorials/next-js-and-shopify-store/creating-the-next-js-app.mdx
@@ -1,7 +1,5 @@
 # Creating the Next.js App
 
-## Creating the Next.js App
-
 Now that our Shopify store is all setup and configured we will need to create the Next.js front-end for it. Fortunately, the amazing team at Vercel has already provided us with a project which we can use for our store.
 
 We will be using the Next.js Commerce application, which you can find more about [here](https://nextjs.org/commerce).
@@ -29,10 +27,9 @@ Next, we will need to change providers in the app to Shopify. We can follow alon
 
 Create a file called `.env.local` inside of the `site/` directory. Open `site/.env.local` and update it to look like the following.
 
-<aside>
-💡 You will need your Shopify Storefront API key and the domain of your store.
-
-</aside>
+:::info
+You will need your Shopify Storefront API key and the domain of your store.
+:::
 
 ```bash
 # site/.env.local
