--- a/content/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions.mdx
+++ b/content/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions.mdx
@@ -1,7 +1,5 @@
 # Running Our Tests with GitHub Actions
 
-# GitHub Actions
-
 Now that we have a few tests written for our Next.js store, let's setup [GitHub Actions](https://github.com/features/actions) to run our Cypress tests against our app every time we make a pull request. This way we can be sure that our latest changes have not broken anything within the app.
 
 ## Configuring GitHub Actions
@@ -178,7 +176,9 @@ We know that this test was passing locally, so why is it failing in CI?
 
 Our error says the following:
 
-> AssertionError: Timed out retrying after 4000ms: Expected to find element: `[data-test="product-tag"]`, but never found it.
+:::warning
+AssertionError: Timed out retrying after 4000ms: Expected to find element: `[data-test="product-tag"]`, but never found it.
+:::
 
 So it seems like the first part of our test is working, but once we get to the search results page it cannot find the `product-tag` element. We will add some `data-test` attributes to the `components/product/ProductCard.tsx` component. Around line `73`
 
