--- a/content/tutorials/next-js-and-shopify-store/creating-the-next-js-app.mdx
+++ b/content/tutorials/next-js-and-shopify-store/creating-the-next-js-app.mdx
@@ -23,7 +23,7 @@ cd commerce
 yarn install
 ```
 
-Next, we will need to change providers in the app to Shopify. We can follow along with the directions in the [README](http://README.md) of the repo under the “How to change providers” section.
+Next, we will need to change providers in the app to Shopify. We can follow along with the directions in the [README](https://github.com/vercel/commerce#how-to-change-providers) of the repo under the “How to change providers” section.
 
 Create a file called `.env.local` inside of the `site/` directory. Open `site/.env.local` and update it to look like the following.
 
