--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -76,10 +76,10 @@ In the next lesson, we will learn how to install Cypress and write our first tes
 
 ## Practice
 
-After completing all of the lessons in this tutorial, make sure to check out the [practice.js](https://github.com/cypress-io/cypress-realworld-testing-todomvc/blob/master/cypress/integration/practice/practice.spec.js) file in the repo. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you will learn in this tutorial.
+After completing all of the lessons in this tutorial, make sure to check out the [practice.js](https://github.com/cypress-io/cypress-realworld-testing-todomvc/blob/master/cypress/e2e/practice/practice.cy.js) file in the repo. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you will learn in this tutorial.
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/practice.png)
 
-Should you get stuck or need some help, all of the answers are provided within [final/practice.js](https://github.com/cypress-io/cypress-realworld-testing-todomvc/blob/master/cypress/integration/final/practice.spec.js)
+Should you get stuck or need some help, all of the answers are provided within [final/practice.js](https://github.com/cypress-io/cypress-realworld-testing-todomvc/blob/master/cypress/e2e/final/practice.cy.js)
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/final-practice.png)
