updated images paths for all lessons

--- a/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
@@ -8,9 +8,9 @@ User journeys are the essential paths a user of your application takes.
 
 In a [future lesson](https://learn.cypress.io/testing-foundations/knowing-what-to-test), we go into greater detail about what a user journey is, but we wanted to introduce you to this concept right from the start since it is incredibly valuable for testing.
 
-For example, in the context of our course application: 
+For example, in the context of our course application:
 
-1. A user lands on the home page and finds one of the courses, 
+1. A user lands on the home page and finds one of the courses,
 2. They click on the “Get started” button and are taken to the course landing page
 3. They click on the “Start Course” button and are taken to the first lesson of that course
 4. They read the lesson and complete the quiz at the bottom.
@@ -25,11 +25,9 @@ What makes a user journey test so valuable is the fact that you are testing ever
 First, let’s create a new test called `cypress/e2e/user-journey.cy.ts`
 
 ```jsx
-describe('User Journey', () => {
-  it('a user can find a course on the home page and complete the courses lessons', () => {
-    
-  });
-});
+describe("User Journey", () => {
+  it("a user can find a course on the home page and complete the courses lessons", () => {})
+})
 ```
 
 First, we need to visit the home page of our application.
@@ -42,7 +40,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.08.54 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.08.54_AM.png)
+![Screen Shot 2022-07-12 at 10.08.54 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.08.54_AM.png)
 
 Next, we need to get the “Get started” button of one of our courses
 
@@ -55,7 +53,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.09.49 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.09.49_AM.png)
+![Screen Shot 2022-07-12 at 10.09.49 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.09.49_AM.png)
 
 Then we will write an assertion that the “Get started” button has navigated the user to the correct course page.
 
@@ -82,7 +80,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.11.21 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.11.21_AM.png)
+![Screen Shot 2022-07-12 at 10.11.21 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.11.21_AM.png)
 
 We will then write another assertion to verify that the “Start Course” button has navigated our user to the correct lesson page.
 
@@ -101,9 +99,9 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.12.09 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.12.09_AM.png)
+![Screen Shot 2022-07-12 at 10.12.09 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.12.09_AM.png)
 
-Then we need to complete the quiz at the bottom of the page. 
+Then we need to complete the quiz at the bottom of the page.
 
 <aside>
 💡 In this demo application, all of the answers are true.
@@ -126,7 +124,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.12.54 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.12.54_AM.png)
+![Screen Shot 2022-07-12 at 10.12.54 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.12.54_AM.png)
 
 We then want to assert that the “Next Lesson” button has appeared on the page and then click it.
 
@@ -147,7 +145,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.13.42 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.13.42_AM.png)
+![Screen Shot 2022-07-12 at 10.13.42 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.13.42_AM.png)
 
 Finally, we write our final assertion that verifies that the “Next Lesson” takes the user to the correct lesson page.
 
@@ -172,7 +170,7 @@ describe("User Journey", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 10.14.14 AM.png](How%20to%20test%20user%20journeys%209c8f6c307d5d4301978f034b85fdd262/Screen_Shot_2022-07-12_at_10.14.14_AM.png)
+![Screen Shot 2022-07-12 at 10.14.14 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.14.14_AM.png)
 
 ## Final code
 
