--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -1,18 +1,5 @@
 # How to test forms & custom Cypress commands
 
-- Introduce Cypress custom commands
-    - Show them how to write a custom command for getting `data-test` attributes more easily
-    - Include an animated gif that visually shows how this custom command works
-    - Refactor tests to use our custom command instead of classes and id’s
-- Write a test for when a user successfully subscribes to our newsletter
-- Discuss happy vs unhappy paths
-- Write a test for when a user enters in a bad email
-- Practice: Write a test for when a user has already subscribed to our newsletter
-    - Give them some hints to get started
-    - The solution to this test should be in the content but hidden in an accordion.
-
----
-
 ## Custom Cypress Commands
 
 In the previous lesson, we updated our test to use a `data-test` attribute like so:
@@ -25,7 +12,7 @@ While this is perfectly valid, wouldn’t it be nice if we could clean up this s
 
 To do this, we can write our own [custom Cypress command](https://docs.cypress.io/api/cypress-api/custom-commands). A custom Cypress command is essentially just a function that we can use throughout our tests. What a custom command allows us to do is to reuse code or functionality across all of our Cypress spec files.
 
-For our use case, we want to create a custom Cypress command that will allow us to “get” `data-test` attributes more easily. To do this, we need to add our custom command to the `cypress/support/commands.ts` file. 
+For our use case, we want to create a custom Cypress command that will allow us to “get” `data-test` attributes more easily. To do this, we need to add our custom command to the `cypress/support/commands.ts` file.
 
 By default, this file will contain a bunch of code comments that provide some instructions on how to create a custom command. Delete all of the code comments within this file, and update **the entire file** to the following:
 
@@ -55,35 +42,35 @@ Now that we have created our custom command, let’s refactor our `cypress/e2e/h
 // home.cy.ts
 
 it("the h1 contains the correct text", () => {
-    cy.getByData("hero-heading").contains(
-      "Testing Next.js Applications with Cypress"
-    )
-  })
+  cy.getByData("hero-heading").contains(
+    "Testing Next.js Applications with Cypress"
+  )
+})
 ```
 
 Now if we launch cypress and run our test should still be passing.
 
-![Screen Shot 2022-07-11 at 9.17.04 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_9.17.04_AM.png)
+![Screen Shot 2022-07-11 at 9.17.04 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_9.17.04_AM.png)
 
 In case that explanation went to fast or was not very clear, we have created a short video that explains in-depth how our custom Cypress command works.
 
 [https://youtu.be/5F7t9IPoUvo](https://youtu.be/5F7t9IPoUvo)
 
-Throughout the rest of this course, we will be using this custom Cypress command to get our elements for testing. Custom Cypress commands are extremely powerful and useful. You will find yourself writing them all the time once you gain more experience with Cypress. 
+Throughout the rest of this course, we will be using this custom Cypress command to get our elements for testing. Custom Cypress commands are extremely powerful and useful. You will find yourself writing them all the time once you gain more experience with Cypress.
 
 To learn more you can [check out our docs](https://docs.cypress.io/api/cypress-api/custom-commands).
 
 ## Testing forms
 
-One of the most common things you will find yourself writing tests for in any web application are forms. Since that is the case, we are going to spend the rest of this lesson discussing how to write tests for them. In our course application, in the hero section of the home page, we have a single input field and button that allows users to signup for our newsletter. 
+One of the most common things you will find yourself writing tests for in any web application are forms. Since that is the case, we are going to spend the rest of this lesson discussing how to write tests for them. In our course application, in the hero section of the home page, we have a single input field and button that allows users to signup for our newsletter.
 
-![Screen Shot 2022-07-11 at 9.23.22 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_9.23.22_AM.png)
+![Screen Shot 2022-07-11 at 9.23.22 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_9.23.22_AM.png)
 
-On the surface, this simple form may seem like an easy thing to test, after all, there is only a single input field, right? 
+On the surface, this simple form may seem like an easy thing to test, after all, there is only a single input field, right?
 
-Not so fast. 
+Not so fast.
 
-Before we begin writing tests for this form, let’s discuss all of the various scenarios our users can experience with this “simple” form. 
+Before we begin writing tests for this form, let’s discuss all of the various scenarios our users can experience with this “simple” form.
 
 1. How do we know if a user has successfully subscribed to our newsletter?
 2. What if a user enters a bad email?
@@ -96,13 +83,13 @@ As you can see, this simple form is quite complicated once you begin to think th
 
 ## Unhappy vs happy paths
 
-As we are considering the various scenarios and states a user can experience with our newsletter signup form, we wanted to discuss the topic of “unhappy” vs “happy” paths. This idea is very important when learning how to write tests for your application. When you are considering what to test and which tests you need to write it is important to not only include the “happy” paths, or the paths that a user can take that lead to successful results. 
+As we are considering the various scenarios and states a user can experience with our newsletter signup form, we wanted to discuss the topic of “unhappy” vs “happy” paths. This idea is very important when learning how to write tests for your application. When you are considering what to test and which tests you need to write it is important to not only include the “happy” paths, or the paths that a user can take that lead to successful results.
 
 You also need to take into consideration the “unhappy” paths or the paths a user can take that could get them into trouble, throw an error, cause your application to crash, etc. You should also be writing tests to make sure a malicious user cannot get access to information that is private, perform an XSS attack, and more. These are just some of the things you need to be considering as you are testing your application. Remember the internet is exposed and open to the entire world, and some of the users of our application may have ill intent and wish to exploit or “hack” your application for nefarious reasons. Make sure to write tests to try and protect your application and your user's private data from being exposed to the wrong people.
 
 ## Test: Users can successfully subscribe
 
-In the context of our newsletter signup form, an example of a “happy path” would be when a user enters a valid email address and is able to successfully sign up for our newsletter. An example of an “unhappy path” is when a user enters a bad email and is unable to signup for our newsletter. 
+In the context of our newsletter signup form, an example of a “happy path” would be when a user enters a valid email address and is able to successfully sign up for our newsletter. An example of an “unhappy path” is when a user enters a bad email and is unable to signup for our newsletter.
 
 Now that we have a better understanding of some of the various scenarios a user can experience with our form, let’s write some tests for them.
 
@@ -133,7 +120,7 @@ describe("Newsletter Subscribe Form", () => {
   it("allows users to subscribe to the email list", () => {
     cy.getByData("email-input")
   })
-}) 
+})
 ```
 
 Let’s run this new spec file and make sure things are working properly.
@@ -143,42 +130,42 @@ Let’s run this new spec file and make sure things are working properly.
 
 </aside>
 
-![Screen Shot 2022-07-11 at 10.09.18 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.09.18_AM.png)
+![Screen Shot 2022-07-11 at 10.09.18 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.09.18_AM.png)
 
-Now that we know things are working properly, let’s continue writing our test. 
+Now that we know things are working properly, let’s continue writing our test.
 
 We have the email input element, and now we need to type in a valid email. We can do this by chaining the [type](https://docs.cypress.io/api/commands/type) method like so:
 
 ```jsx
 it("allows users to subscribe to the email list", () => {
-    cy.getByData("email-input").type("tom@aol.com")
-  })
+  cy.getByData("email-input").type("tom@aol.com")
+})
 ```
 
 Back in the Cypress app, we can inspect the type method and see the state of our application before we type in the email and after like so:
 
-![Screen Shot 2022-07-11 at 10.15.09 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.15.09_AM.png)
+![Screen Shot 2022-07-11 at 10.15.09 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.15.09_AM.png)
 
 Cypress offers “time travel debugging” which is an incredibly powerful way of inspecting exactly what is going on inside of our tests. By clicking on the “type” step we can then click on “before” and “after” and see the state of our app before we type into the input field and after we type into the input field.
 
 Before:
 
-![Screen Shot 2022-07-11 at 10.17.20 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.17.20_AM.png)
+![Screen Shot 2022-07-11 at 10.17.20 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.17.20_AM.png)
 
 After:
 
-![Screen Shot 2022-07-11 at 10.17.23 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.17.23_AM.png)
+![Screen Shot 2022-07-11 at 10.17.23 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.17.23_AM.png)
 
 Next, we need to get the “Subscribe” button so that we can click on it and submit the email and our form.
 
 ```jsx
 it("allows users to subscribe to the email list", () => {
-    cy.getByData("email-input").type("tom@aol.com")
-    cy.getByData("submit-button").click()
-  })
+  cy.getByData("email-input").type("tom@aol.com")
+  cy.getByData("submit-button").click()
+})
 ```
 
-![Screen Shot 2022-07-11 at 10.18.49 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.18.49_AM.png)
+![Screen Shot 2022-07-11 at 10.18.49 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.18.49_AM.png)
 
 In the Cypress app, we can see a success message displayed to the user letting them know that they have subscribed successfully. Let’s write an assertion to make sure that this message appears after successful submission.
 
@@ -186,27 +173,27 @@ First, let’s get the success message element on the page.
 
 ```jsx
 it("allows users to subscribe to the email list", () => {
-    // ...
-    cy.getByData("success-message")
-  })
+  // ...
+  cy.getByData("success-message")
+})
 ```
 
 Then we want to make sure that the success message element “exists” in the DOM, like so:
 
 ```jsx
 it("allows users to subscribe to the email list", () => {
-    // ...
-    cy.getByData("success-message").should("exist")
-  })
+  // ...
+  cy.getByData("success-message").should("exist")
+})
 ```
 
 Finally, we want to assert that the message contains the email address that was successfully subscribed.
 
 ```jsx
 it("allows users to subscribe to the email list", () => {
-    // ...
-    cy.getByData("success-message").should("exist").contains("tom@aol.com")
-  })
+  // ...
+  cy.getByData("success-message").should("exist").contains("tom@aol.com")
+})
 ```
 
 The entire `subscribe.cy.ts` spec file should look like this:
@@ -225,25 +212,25 @@ describe("Newsletter Subscribe Form", () => {
 })
 ```
 
-![Screen Shot 2022-07-11 at 10.23.32 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.23.32_AM.png)
+![Screen Shot 2022-07-11 at 10.23.32 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.23.32_AM.png)
 
 ## Reminder: How to find data-test attributes
 
 If you have been following along up until this point and are confused as to how we are finding the `data-test` attributes on each element, remember you have two tools at your disposal. The first is the developer tools within your browser. You can open them by right-clicking on any element on the page and then selecting “inspect.” like so:
 
-![Screen Shot 2022-07-11 at 10.27.57 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.27.57_AM.png)
+![Screen Shot 2022-07-11 at 10.27.57 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.27.57_AM.png)
 
-![Screen Shot 2022-07-11 at 10.28.38 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.28.38_AM.png)
+![Screen Shot 2022-07-11 at 10.28.38 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.28.38_AM.png)
 
 You can also open them with the keyboard shortcut `cmd + option + i` on a mac and `ctrl + shift + i` on windows.
 
 Or, you can also use the “selector playground” in the Cypress app like so:
 
-![Screen Shot 2022-07-11 at 10.29.04 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.29.04_AM.png)
+![Screen Shot 2022-07-11 at 10.29.04 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.29.04_AM.png)
 
 Once you click on the “selector playground” button you can then select any element in the app and Cypress will give you the correct selector.
 
-![Screen Shot 2022-07-11 at 10.31.42 AM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_10.31.42_AM.png)
+![Screen Shot 2022-07-11 at 10.31.42 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_10.31.42_AM.png)
 
 ## Test: Invalid email address
 
@@ -269,25 +256,25 @@ describe("Newsletter Subscribe Form", () => {
 })
 ```
 
-We can then copy and paste the contents from our previous test and make a slight modification. 
+We can then copy and paste the contents from our previous test and make a slight modification.
 
 ```jsx
 it("does NOT allow a invalid email address", () => {
-    cy.getByData("email-input").type("tom")
-    cy.getByData("submit-button").click()
-    cy.getByData("success-message").should("not.exist")
-  })
+  cy.getByData("email-input").type("tom")
+  cy.getByData("submit-button").click()
+  cy.getByData("success-message").should("not.exist")
+})
 ```
 
 First, we are getting the input field and then type in our invalid email address. Then we click on the submit button. Finally, we write an assertion that says that our success element message should not exist.
 
-![Screen Shot 2022-07-11 at 1.56.06 PM.png](How%20to%20test%20forms%20&%20custom%20Cypress%20commands%208ae6d6d8890e4fff8d2c43eeac32e7f1/Screen_Shot_2022-07-11_at_1.56.06_PM.png)
+![Screen Shot 2022-07-11 at 1.56.06 PM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_1.56.06_PM.png)
 
 ## Practice
 
-For our final test in this lesson, we are going to ask you to write it all on your own for practice. For this test, you are going to write a test to make sure that users cannot sign up for our newsletter if they are already subscribed. 
+For our final test in this lesson, we are going to ask you to write it all on your own for practice. For this test, you are going to write a test to make sure that users cannot sign up for our newsletter if they are already subscribed.
 
-You need to use the email address “[john@example.com](mailto:john@example.com)” otherwise your test will not pass. 
+You need to use the email address “[john@example.com](mailto:john@example.com)” otherwise your test will not pass.
 
 Before you begin writing the test, enter in this email address into the app and try to submit it. See what happens and make note of the error message that is displayed.
 
@@ -297,12 +284,12 @@ Here is the final answer:
 
 ```jsx
 it("does NOT allow already subscribed email addresses", () => {
-    cy.getByData("email-input").type("john@example.com")
-    cy.getByData("submit-button").click()
-    cy.getByData("server-error-message")
-      .should("exist")
-      .contains("already exists. Please use a different email address.")
-  })
+  cy.getByData("email-input").type("john@example.com")
+  cy.getByData("submit-button").click()
+  cy.getByData("server-error-message")
+    .should("exist")
+    .contains("already exists. Please use a different email address.")
+})
 ```
 
 ## Wrap Up
