--- a/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
@@ -1,32 +1,18 @@
 # How to test multiple pages
 
-## Outline
-
-- test the courses section on the home page and that the “get started” buttons link to the correct page
-    - Assert the correct path/location
-    - assert the correct h1 heading on the course page
-    - After showing them the first test, have them write the next 2 tests as practice
-        - provide the answers in the content in an accordion dropdown
-- introduce the concept of user journeys and why they are useful
-- write a user journey test
-
----
-
-## How to test multiple pages
-
 In this lesson, we are going to learn how to write tests that span multiple pages. This is extremely common when writing E2E tests as oftentimes you need to click on a button or a link that navigates to a new page.
 
 In the context of our course application, on the home page, there is a section for each course, like so:
 
-![Screen Shot 2022-07-12 at 8.25.04 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_8.25.04_AM.png)
+![Screen Shot 2022-07-12 at 8.25.04 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.25.04_AM.png)
 
-The “Get started” button links to the course page and provides more details about the lessons contained within that course. 
+The “Get started” button links to the course page and provides more details about the lessons contained within that course.
 
-![screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png)
+![screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png](/images/testing-your-first-application/how-to-test-multiple-pages/screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png)
 
 ## Writing our multiple page test
 
-Now that we understand how these “Get started” buttons work on the home page, let’s write some tests for them. We will be writing these tests in the `home.cy.ts` spec file. 
+Now that we understand how these “Get started” buttons work on the home page, let’s write some tests for them. We will be writing these tests in the `home.cy.ts` spec file.
 
 Our spec file up until this point looks like the following:
 
@@ -82,11 +68,11 @@ As you can see by using context we can wrap all of the tests related to the hero
 
 If we run our tests, everything is still passing.
 
-![Screen Shot 2022-07-12 at 8.34.26 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_8.34.26_AM.png)
+![Screen Shot 2022-07-12 at 8.34.26 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.34.26_AM.png)
 
 Also, when you are running your tests in headless mode, which is how then will run in Continuous Integration, you will see the following in the output.
 
-![Screen Shot 2022-07-12 at 8.36.33 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_8.36.33_AM.png)
+![Screen Shot 2022-07-12 at 8.36.33 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.36.33_AM.png)
 
 Notice how all of the tests related to the hero section are nested underneath the “Hero section” heading. This too makes it very easy to understand which tests are for what at a quick glance.
 
@@ -124,57 +110,55 @@ Next, we will create a new test for the first course, “Testing Your First Next
 // ...
 
 context("Courses section", () => {
-    it("Course: Testing Your First Next.js Application", () => {})
-  })
+  it("Course: Testing Your First Next.js Application", () => {})
+})
 ```
 
 Now, we need to get the “Get started” button, however, there is a slight problem. The “Get started” buttons do not have a `data-test` attribute on them. Since we have access to our application's source code, we could easily add them, however, what do we do if we don’t? If we inspect the DOM, with our browser’s dev tools, we can see that each course is wrapped in the following markup.
 
-![Screen Shot 2022-07-12 at 8.50.32 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_8.50.32_AM.png)
+![Screen Shot 2022-07-12 at 8.50.32 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.50.32_AM.png)
 
 ```html
-<div data-test="course-0">
-
-</div>
+<div data-test="course-0"></div>
 ```
 
 We are now going to learn a new Cypress command that allows us to narrow down the scope in which Cypress looks for an element. We can tell Cypress to [find](https://docs.cypress.io/api/commands/find) elements that are within this element, ie: the elements direct children.
 
 ```jsx
 context("Courses section", () => {
-    it.only("Course: Testing Your First Next.js Application", () => {
-      cy.getByData("course-0").find("a")
-    })
+  it.only("Course: Testing Your First Next.js Application", () => {
+    cy.getByData("course-0").find("a")
   })
+})
 ```
 
-![Screen Shot 2022-07-12 at 8.57.15 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_8.57.15_AM.png)
+![Screen Shot 2022-07-12 at 8.57.15 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.57.15_AM.png)
 
 If we run our test, you will see that Cypress has found four `<a>` tags within the `<div data-test="course-0">` element. In a previous test, we used [eq](https://docs.cypress.io/api/commands/eq) to select a specific element from the returned array, inside of “the features on the homepage are correct” test.
 
 ```jsx
 it("the features on the homepage are correct", () => {
-      cy.get("dt").eq(0).contains("4 Courses")
-      cy.get("dt").eq(1).contains("25+ Lessons")
-      cy.get("dt").eq(2).contains("Free and Open Source")
-    })
+  cy.get("dt").eq(0).contains("4 Courses")
+  cy.get("dt").eq(1).contains("25+ Lessons")
+  cy.get("dt").eq(2).contains("Free and Open Source")
+})
 ```
 
 So let’s update our test to use the eq command and select the last element in the array which is our button.
 
-![Screen Shot 2022-07-12 at 9.00.12 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_9.00.12_AM.png)
+![Screen Shot 2022-07-12 at 9.00.12 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_9.00.12_AM.png)
 
 Now that we have our button, all that is left to do is to click on it.
 
 ```jsx
 context("Courses section", () => {
-    it.only("Course: Testing Your First Next.js Application", () => {
-      cy.getByData("course-0").find("a").eq(3).click()
-    })
+  it.only("Course: Testing Your First Next.js Application", () => {
+    cy.getByData("course-0").find("a").eq(3).click()
   })
+})
 ```
 
-![Screen Shot 2022-07-12 at 9.01.18 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_9.01.18_AM.png)
+![Screen Shot 2022-07-12 at 9.01.18 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_9.01.18_AM.png)
 
 As you can see we have successfully clicked on our button and navigated to the course page.
 
@@ -186,7 +170,7 @@ Remember, how in a previous lesson we stressed the importance of using `data` at
 cy.getByData("course-0").find("a").eq(3).click()
 ```
 
-This is quite brittle and should only be used sparingly. If a lesson is added or removed from our course, our test is going to break since we are relying upon the specific ordering of the elements returned in this array. 
+This is quite brittle and should only be used sparingly. If a lesson is added or removed from our course, our test is going to break since we are relying upon the specific ordering of the elements returned in this array.
 
 To sum all of this up, use `data` attributes whenever possible, otherwise, your tests can be quite brittle and break in the future.
 
@@ -196,16 +180,16 @@ Now that we have successfully clicked on our button and navigated to our course 
 
 ```jsx
 context("Courses section", () => {
-    it.only("Course: Testing Your First Next.js Application", () => {
-      cy.getByData("course-0").find("a").eq(3).click()
-      cy.location("pathname").should("eq", "/testing-your-first-application")
-    })
+  it.only("Course: Testing Your First Next.js Application", () => {
+    cy.getByData("course-0").find("a").eq(3).click()
+    cy.location("pathname").should("eq", "/testing-your-first-application")
   })
+})
 ```
 
 We are using the [location](https://docs.cypress.io/api/commands/location) API to get the “pathname” which is the URL of our application. Then we write our assertion to make sure that it equals the correct URL or path.
 
-![Screen Shot 2022-07-12 at 9.10.40 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_9.10.40_AM.png)
+![Screen Shot 2022-07-12 at 9.10.40 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_9.10.40_AM.png)
 
 Congrats! You have now learned how to write tests that span multiple pages.
 
@@ -242,7 +226,7 @@ describe("Home page", () => {
 })
 ```
 
-![Screen Shot 2022-07-12 at 9.13.32 AM.png](How%20to%20test%20multiple%20pages%20292651b5a740422da711797cf1123a92/Screen_Shot_2022-07-12_at_9.13.32_AM.png)
+![Screen Shot 2022-07-12 at 9.13.32 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_9.13.32_AM.png)
 
 It is always a good idea to re-run all of the tests in your spec file to make sure everything is still passing after you have finished writing a new test.
 
@@ -254,9 +238,9 @@ Hint: You can copy and paste the test we just wrote:
 
 ```jsx
 it("Course: Testing Your First Next.js Application", () => {
-      cy.getByData("course-0").find("a").eq(3).click()
-      cy.location("pathname").should("eq", "/testing-your-first-application")
-    })
+  cy.getByData("course-0").find("a").eq(3).click()
+  cy.location("pathname").should("eq", "/testing-your-first-application")
+})
 ```
 
 and make slight modifications for each course and course page.
