--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -2,16 +2,16 @@
 
 ## Intro
 
-Welcome to the Testing your first application course! In this course, we are going to learn how to install Cypress, how to write end-to-end tests and some best practices along the way.
+Welcome to the Testing your first application course. In this course, we are going to learn how to install Cypress, how to write end-to-end tests and some best practices along the way.
 
 :::info
-Before we begin, this content was written with the assumption that you know at least the basics of HTML, CSS, and JavaScript. It is ok if you have never used Cypress before, we will teach you everything you need to know!
+Before we begin, this content was written with the assumption that you know the basics of HTML, CSS, and JavaScript. It is ok if you have never used Cypress before. We will teach you everything you need to know.
 
 :::
 
 ## Installing the application
 
-You are going to need to download or clone a copy of this application onto your computer to follow along.
+You are going to need to download or clone a copy of the application onto your computer to follow along.
 
 There are a couple of different ways you can do this.
 
@@ -19,22 +19,21 @@ There are a couple of different ways you can do this.
 
 If you are familiar with Git and already have it installed the easiest way to clone [the repo](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start) is to run this command in your terminal.
 
+:::info
+Running this command will download the repo on the “start” branch. It is very important you are on the “start” branch and **not** on master.
+:::
+
 ```bash
 git clone --branch start git@github.com:cypress-io/cypress-realworld-testing-course-app.git
 ```
-
-:::info
-Running this command will download the repo on the “start” branch. It is very important you are on the “start” branch and not on master.
-
-:::
 
 ### Downloading a zip file
 
 If you are not familiar with Git or don’t have it installed, you can easily download a zip file of the repo [here](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start).
 
-![Screen Shot 2022-06-27 at 3.55.08 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_3.55.08_PM.png)
-
+:::info
 You want to make sure you are on the “start” branch. The link provided should do this for you automatically, but you should double-check anyways.
+:::
 
 ![Screen Shot 2022-06-27 at 4.05.46 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_4.05.46_PM.png)
 
@@ -120,7 +119,7 @@ The course page provides some additional information and details about the speci
 
 ![Screen Shot 2022-06-28 at 8.33.22 AM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-28_at_8.33.22_AM.png)
 
-You will notice in this screenshot that the text of our button has changed from “Start Course” to “Next Lesson” since we have completed the first lesson. This button is dynamic and will update the text and link to the next lesson automatically. This button contains some important state and logic that we are going to want to test later on. Clicking on the button will take you to the lesson page.
+You will notice in this screenshot that the text of our button has changed from “Start Course” to “Next Lesson” since we have completed the first lesson. This button is dynamic and will update the text and link to the next lesson automatically. Clicking on the button will take you to the lesson page.
 
 ### Lesson page
 
