added app install and overview video to lesson page

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -1,5 +1,7 @@
 # App Installation & Overview
 
+<YouTube id="ltbUWEPrB24" />
+
 ## Intro
 
 Welcome to the Testing your first application course. In this course, we are going to learn how to install Cypress, how to write end-to-end tests and some best practices along the way.
