added command chaining video to lesson page

--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -236,6 +236,8 @@ Congratulations! You just wrote your first Cypress E2E test 🎉
 
 ## Aside: Command Chaining
 
+<YouTube id="WHDvViZazWI" />
+
 Let’s briefly discuss what is happening on this line:
 
 ```jsx
