added videos to lessons 1 and 2

--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -1,5 +1,7 @@
 # Installing Cypress and writing your first test
 
+<YouTube id="x0QuiEJUf6s" />
+
 ## Installing Cypress
 
 Before we can begin writing Cypress tests, we first need to install it. Within your terminal type the following:
