added testing forms video to lesson page

--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -1,5 +1,7 @@
 # How to test forms & custom Cypress commands
 
+<YouTube id="Q1rHmOYyGDo" />
+
 ## Custom Cypress Commands
 
 In the previous lesson, we updated our test to use a `data-test` attribute like so:
