added multiple pages video to lesson page

--- a/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
@@ -1,5 +1,7 @@
 # How to test multiple pages
 
+<YouTube id="ZyalhygcSRw" />
+
 In this lesson, we are going to learn how to write tests that span multiple pages. This is extremely common when writing E2E tests as oftentimes you need to click on a button or a link that navigates to a new page.
 
 In the context of our course application, on the home page, there is a section for each course, like so:
