added user journey video to lesson page

--- a/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
@@ -1,5 +1,7 @@
 # How to test user journeys
 
+<YouTube id="lLk_oPeUcNQ" />
+
 In this final lesson, we are going to introduce you to the concept of “user journeys” and how to write tests for them.
 
 ## What are user journeys?
