added tips below the first screenshot of each lesson to let users know they can click on them to make the images larger

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -39,6 +39,10 @@ You want to make sure you are on the “start” branch. The link provided shoul
 
 ![Screen Shot 2022-06-27 at 4.05.46 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_4.05.46_PM.png)
 
+:::tip
+You can click on the images to enlarge them.
+:::
+
 Next, click on the green “Code” button and then click on “Download ZIP.” This will download a zip file of the repo onto your computer which you will then need to unzip.
 
 ![Screen Shot 2022-06-27 at 3.54.47 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_3.54.47_PM.png)
