--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -54,6 +54,10 @@ Now if we launch cypress and run our test should still be passing.
 
 ![Screen Shot 2022-07-11 at 9.17.04 AM.png](/images/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands/Screen_Shot_2022-07-11_at_9.17.04_AM.png)
 
+:::tip
+You can click on the images to enlarge them.
+:::
+
 In case that explanation went to fast or was not very clear, we have created a short video that explains in-depth how our custom Cypress command works.
 
 <YouTube id="5F7t9IPoUvo" />
