--- a/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
@@ -8,6 +8,10 @@ In the context of our course application, on the home page, there is a section f
 
 ![Screen Shot 2022-07-12 at 8.25.04 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.25.04_AM.png)
 
+:::tip
+You can click on the images to enlarge them.
+:::
+
 The “Get started” button links to the course page and provides more details about the lessons contained within that course.
 
 ![screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png](/images/testing-your-first-application/how-to-test-multiple-pages/screencapture-localhost-3000-testing-your-first-application-2022-07-12-08_25_51.png)
