--- a/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-user-journeys.mdx
@@ -46,6 +46,10 @@ describe("User Journey", () => {
 
 ![Screen Shot 2022-07-12 at 10.08.54 AM.png](/images/testing-your-first-application/how-to-test-user-journeys/Screen_Shot_2022-07-12_at_10.08.54_AM.png)
 
+:::tip
+You can click on the images to enlarge them.
+:::
+
 Next, we need to get the “Get started” button of one of our courses
 
 ```jsx
