--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -18,6 +18,10 @@ npx cypress open
 
 ![Screen Shot 2022-06-28 at 8.53.33 AM.png](/images/testing-your-first-application/installing-cypress-and-writing-your-first-test/Screen_Shot_2022-06-28_at_8.53.33_AM.png)
 
+:::tip
+You can click on the images to enlarge them.
+:::
+
 With the latest release of Cypress v10, we are now presented with the ability to write E2E or component tests. In this course, we are going to focus solely on E2E tests. Components tests will be covered in another course.
 
 Click on the “E2E Testing” button on the left to get started.
