added info on how to fix TS errors with custom command

--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -26,6 +26,22 @@ Cypress.Commands.add("getByData", (selector) => {
 })
 ```
 
+:::warning
+
+Since we are using TypeScript, you may get some errors from the compiler saying that it is unable to detect the types in our custom command. You can fix this, by creating the file `cypress/support/index.ts` and adding the following:
+
+:::
+
+```ts
+/// <reference types="cypress" />
+
+declare namespace Cypress {
+  interface Chainable {
+    getByData(dataTestAttribute: string): Chainable<JQuery<HTMLElement>>
+  }
+}
+```
+
 This custom command called “getByData” will allow us to pass in the value only of any `data-test` attribute, like so:
 
 ```jsx
